# Python

./: # Solve the quadratic equation ax**2 + bx + c = 0  .Python  .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  1.c  12.py  2to00000010.py  4 Digit Number Combinations.py  56  56.py  8_puzzle.py  A solution to project euler problem 3.py  AREA OF TRIANGLE  AREA OF TRIANGLE.py  ARKA  ARKA.py  ASCIIvaluecharacter  ASCIIvaluecharacter.py  Aakanksha  Add two numbers  Add two numbers.py  Add_Two_Linked_Lists.py  Add_Two_Numbers.py  Add_Two_Numbers_Game.py  Add_two_Linked_List.py  Addtion of two numbers.py  Anonymous_TextApp.py  AreaOfTriangle.py  Areaoftriangle  Armstrong number  Armstrong_number  Armstrong_number.py  Armstrong_number2.py  Audio Summarizer  Audio_Summarizer.py  Bank Application .ipynb  Bank Application .py  Base Converter Number system  (+822 more)
.github/: Snake_game.py  dependabot.yml  pull_request_template.md
Assembler/: GUIDE.txt  README.md  README.txt  assembler.py  test-new-file
AutoComplete_App/: backend.py  backendgui.py  frontend.py
Automated Scheduled Call Reminders/: README.md  caller.py  requirements.txt  schedular.py
Automated_Scheduled_Call_Reminders/: caller.py
Ballon-flight/: README.md  balloon.py  high-scores.txt
BlackJack_game/: blackjack.py  blackjack_rr.py  blackjack_simulate.py  blackjack_simulation.py  requirements.txt
BoardGame-CLI/: python.py  snakeLadder.py  styled_df_output.html  uno.py
BrowserHistory/: backend.py  backendBrowserHistory.py  rock_paper_scissors.py
CRC/: crc.py
Cat/: README.md  README.rd  cat.py  test_cat.py  text_a.txt  text_b.txt  text_c.txt
Checker_game_by_dz/: first.py
CliYoutubeDownloader/: CliYoutubeDownloader.py  requirements.txt
Collatz Sequence/: Collatz Sequence.py  Collaze-Visualize.py
Colors/: multicoloredline.py  pixel_sort.py  primary_colors.py  print_colors.py
Compression_Analysis/: PSNR.py
CountMillionCharacters-Variations/: variation1.py
Decimal to binary/: 2to00000010.py
Digital Clock/: digital_clock.py
Downloaded Files Organizer/: browser_status.py  move_to_directory.py  obs.py  readme.md  requirements.txt
Droplistmenu/: GamesCalender.py  README.md
Eight_Puzzle_Solver/: eight_puzzle.py
Electronics_Algorithms/: Ohms_law.py  resistance.py
Email-Scheduling-Bot/: Email_Scheduler.py
Email_ID_Dictionary/: dict1.py
Emoji Dictionary/: QT_GUI.py  QT_GUI.ui  README.md  emoji_dictionary.py  requirements.txt  untitled.ui
Extract-Table-from-pdf-txt-docx/: main.py
ExtractThumbnailFromVideo/: README.md  extract_thumbnail_from_video.py
Face Sentiment Analysis/: TestEmotionDetectorcheck.py  TrainEmotionDetectorcheck.py  requirements.txt
Face and eye Recognition/: face_recofnation_first.py  gesture_control.py
Face_Mask_detection (haarcascade)/: mask_detection.py
Flappy Bird - created with tkinter/: .gitignore  Background.py  Bird.py  Flappy Bird.py  README.md  Settings.py  Tubes.py
Flashcard App/: main.py
Google Image Downloader/: create_dir.py  create_dir.py~  image grapper.py~
Google_Image_Downloader/: README.md  create_dir.py  image_grapper.py
HTML_to_PDF/: index.html  main.py
Hand-Motion-Detection/: hand_motion_recognizer.py  requirements.txt
Image-watermarker/: app.py  requirements.txt  watermark.py
ImageDownloader/: img_downloader.py  requirements.txt
Industrial_developed_hangman/: .coverage  Makefile  README.md  covreport_hangman.txt  output.txt  pyproject.toml  pytest.ini  setup.cfg
Industrial_developed_hangman/Data/: local_words.txt  text_images.txt
Industrial_developed_hangman/src/hangman/: main.py
Industrial_developed_hangman/tests/test_hangman/: test_main.py
JARVIS/: JARVIS.py  JARVIS_2.0.py  README.md  __init__.py  actions.py  ai.py  apps.py  cli.py  config.py  jarvis.py  memory.py  prompts.py  requirements.txt  safety.py  speech.py  state.py  tempCodeRunnerFile.py  text_utils.py
JustDialScrapperGUI/: Justdial Scrapper GUI.py
Key_Binding/: key_binding.py  requirement.txt
Koch Curve/: README.txt  koch curve.py
Koch_Curve/: README.txt  koch curve.py
Laundary System/: README.md  code.py
Laundry_System/: README.md  code.py
LinkedLists all Types/: circular_linked_list.py  doubly_linked_list.py  singly_linked_list.py
ML/: .gitignore  CLI_USAGE_SUMMARY.md  CMakeLists.txt  DATASETS.md  DOCUMENTATION.md  EXAMPLES.md  FEATURES.md  INSTALL_CLI.md  LAUNCH_GUI.bat  LAUNCH_GUI.sh  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_GUI.md  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh  train.py
ML/examples/: neural_architecture_search.py  train_cifar10.py  train_custom.py
ML/src/cpp/: extension.cpp  operators.cpp
ML/src/cpp/include/: cuda_ops.h
ML/src/cuda/: activations.cu  kernels.cu  matmul.cu  optimizers.cu
ML/src/python/neuralforge/: __init__.py  config.py  trainer.py
ML/src/python/neuralforge/cli/: __init__.py  gui.py  nas.py  test.py  train.py
ML/src/python/neuralforge/data/: __init__.py  augmentation.py  dataset.py  datasets.py  transforms.py
ML/src/python/neuralforge/models/: __init__.py  efficientnet.py  resnet.py  vit.py
ML/src/python/neuralforge/nas/: __init__.py  evaluator.py  evolution.py  search_space.py
ML/src/python/neuralforge/nn/: __init__.py  activations.py  attention.py  convolution.py  layers.py  modules.py
ML/src/python/neuralforge/optim/: __init__.py  optimizers.py  schedulers.py
ML/src/python/neuralforge/utils/: __init__.py  logger.py  metrics.py  visualization.py
ML/tests/: README_GUI.md  SUPPORTED_DATASETS.txt  gui_test.py  quick_test.py  test_model.py
NewsHub_Python/: Newshub.py
News_App/: Newsapp.py  README.md  patterns.py  requirements.txt
NumberToNumberName/: numbername.py
PDF/: basic.py  demerge_pdfs.py  header_footer.py  images.py  requirements.txt
Pallindrome and digits/: Check if a nuber is pallindrome.py  Create a pallindrome from given number.py  continous pallindrome.py  pallindrome dev.py  reverse digit.py
Password Generator/: pass_gen.py  requirements.txt
Password Manager Using Tkinter/: PGV.py  README.md  data.json  main.py  (+1 more)
(+678 files in other folders)
