[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "apscheduler",
    "auto-mix-prep",
    "beautifulsoup4",
    "ccxt",
    "colorama",
    "customtkinter",
    "darkdetect",
    "datetime",
    "django",
    "docx",
    "emoji",
    "fastapi",
    "firebase-admin",
    "fitz",
    "flask",
    "fpdf2",
    "freegames",
    "fuzzywuzzy",
    "geocoder",
    "google-api-python-client",
    "googletrans",
    "gtts",
    "httplib2",
    "httpx",
    "hupper",
    "inquirer",
    "keras",
    "keyboard",
    "matplotlib",
    "mediapipe",
    "mutagen",
    "mysql-connector-python",
    "newspaper",
    "nltk",
    "numpy",
    "openai",
    "opencv-python",
    "openpyxl",
    "pafy>=0.5.5",
    "pandas",
    "pdf2docx",
    "pdfkit",
    "pillow",
    "playsound",
    "playsound3",
    "plyer",
    "protobuf",
    "psutil",
    "pyaudio",
    "pyautogui",
    "pycountry",
    "pydantic",
    "pygame",
    "pyglet",
    "pyjokes",
    "pymongo",
    "pymupdf",
    "pynput",
    "pypdf2",
    "pyperclip",
    "pyqrcode",
    "pyqt5",
    "pyserial",
    "pyshorteners",
    "pytesseract",
    "python-docx",
    "pyttsx3",
    "pytube",
    "pywhatkit",
    "pywifi",
    "pywin32",
    "qrcode",
    "quo",
    "requests",
    "requests-mock",
    "rich",
    "scikit-learn",
    "seaborn",
    "selenium",
    "slab",
    "socksipy-branch",
    "solara",
    "speechrecognition",
    "speechtotext",
    "tabula",
    "tensorflow",
    "thirdai",
    "tkcalendar",
    "tkinter",
    "tkinterdnd2",
    "tkinterweb",
    "tornado",
    "tqdm",
    "translate",
    "tweepy",
    "twilio",
    "ujson",
    "unidecode",
    "urllib3",
    "watchdog",
    "webbrowser",
    "wikipedia",
    "win10toast",
    "word2number",
    "xlrd",
    "xlwt",
    "xor-cipher",
    "yfinance",
]
