[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "apscheduler",
    "auto-mix-prep",
    "beautifulsoup4",
    "ccxt",
    "colorama",
    "customtkinter",
    "darkdetect",
    "datetime",
    "django",
    "docx",
    "emoji",
    "fastapi",
    "firebase-admin",
    "fitz",
    "flask",
    "fpdf2",
    "freegames",
    "fuzzywuzzy",
    "geocoder",
    "google-api-python-client",
    "googletrans",
    "gtts",
    "httplib2",
    "httpx",
    "hupper",
    "inquirer",
    "keras",
    "keyboard",
    "matplotlib",
    "mediapipe",
    "mutagen",
    "mysql-connector-python",
    "newspaper",
    "nltk",
    "numpy",
    "openai",
    "opencv-python",
    "openpyxl",
    "pafy>=0.5.5",
    "pandas",
    "pdf2docx",
    "pdfkit",
    "pillow",
    "playsound",
    "playsound3",
    "plyer",
    "protobuf",
    "psutil",
    "pyaudio",
    "pyautogui",
    "pycountry",
    "pydantic",
    "pygame",
    "pyglet",
    "pyjokes",
    "pymongo",
    "pymupdf",
    "pynput",
    "pypdf2",
    "pyperclip",
    "pyqrcode",
    "pyqt5",
    "pyserial",
    "pyshorteners",
    "pytesseract",
    "python-docx",
    "pyttsx3",
    "pytube",
    "pywhatkit",
    "pywifi",
    "pywin32",
    "qrcode",
    "quo",
    "requests",
    "requests-mock",
    "rich",
    "scikit-learn",
    "seaborn",
    "selenium",
    "slab",
    "socksipy-branch",
    "solara",
    "speechrecognition",
    "speechtotext",
    "tabula",
    "tensorflow",
    "thirdai",
    "tkcalendar",
    "tkinter",
    "tkinterdnd2",
    "tkinterweb",
    "tornado",
    "tqdm",
    "translate",
    "tweepy",
    "twilio",
    "ujson",
    "unidecode",
    "urllib3",
    "watchdog",
    "webbrowser",
    "wikipedia",
    "win10toast",
    "word2number",
    "xlrd",
    "xlwt",
    "xor-cipher",
    "yfinance",
]
[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "YTT",
    "EM", "EXE", "G", "ISC", "PLC", "PLW", "PT", "S", "SIM", "SLF"
]

ignore = [
    "B101",   
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "EM101",  # Exception must not use a string literal
    "EXE001", # Shebang is present but file is not executable
    "G004",   # Logging statement uses f-string
    "ISC001", # Conflicts with ruff format
    "PLC0415",# import-outside-top-level
    "PLC1901",# `{}` can be simplified to `{}` as an empty string is falsey
    "PLW060", # Using global without assignment
    "PLW1641",# eq-without-hash
    "PLW2901",# Redefined loop variable
    "PT011",  # pytest.raises(Exception) is too broad
    "PT018",  # Assertion should be broken down
    "PT028",  # pytest-parameter-with-default-argument
    "S101",   # Use of `assert` detected
    "S311",   # Standard pseudo-random generators
    "SIM905", # Consider using a list literal instead of `str.split`
    "SLF001", # Private member accessed
    "UP038",  # Use `X | Y` in `{}` call
]

max-args = 10
max-branches = 20
max-returns = 8
max-statements = 88
