[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "apscheduler",
    "auto-mix-prep",
    "beautifulsoup4",
    "ccxt",
    "colorama",
    "customtkinter",
    "darkdetect",
    "datetime",
    "django",
    "docx",
    "emoji",
    "fastapi",
    "firebase-admin",
    "fitz",
    "flask",
    "fpdf2",
    "freegames",
    "fuzzywuzzy",
    "geocoder",
    "google-api-python-client",
    "googletrans",
    "gtts",
    "httplib2",
    "httpx",
    "hupper",
    "inquirer",
    "keras",
    "keyboard",
    "matplotlib",
    "mediapipe",
    "mutagen",
    "mysql-connector-python",
    "newspaper",
    "nltk",
    "numpy",
    "openai",
    "opencv-python",
    "openpyxl",
    "pafy>=0.5.5",
    "pandas",
    "pdf2docx",
    "pdfkit",
    "pillow",
    "playsound",
    "playsound3",
    "plyer",
    "protobuf",
    "psutil",
    "pyaudio",
    "pyautogui",
    "pycountry",
    "pydantic",
    "pygame",
    "pyglet",
    "pyjokes",
    "pymongo",
    "pymupdf",
    "pynput",
    "pypdf2",
    "pyperclip",
    "pyqrcode",
    "pyqt5",
    "pyserial",
    "pyshorteners",
    "pytesseract",
    "python-docx",
    "pyttsx3",
    "pytube",
    "pywhatkit",
    "pywifi",
    "pywin32",
    "qrcode",
    "quo",
    "requests",
    "requests-mock",
    "rich",
    "scikit-learn",
    "seaborn",
    "selenium",
    "slab",
    "socksipy-branch",
    "solara",
    "speechrecognition",
    "speechtotext",
    "tabula",
    "tensorflow",
    "thirdai",
    "tkcalendar",
    "tkinter",
    "tkinterdnd2",
    "tkinterweb",
    "tornado",
    "tqdm",
    "translate",
    "tweepy",
    "twilio",
    "ujson",
    "unidecode",
    "urllib3",
    "watchdog",
    "webbrowser",
    "wikipedia",
    "win10toast",
    "word2number",
    "xlrd",
    "xlwt",
    "xor-cipher",
    "yfinance",
]
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[tool.codespell]
ignore-words-list = "3rt,abd,aer,ans,bitap,crate,damon,fo,followings,hist,iff,kwanza,manuel,mater,secant,som,sur,tim,toi,zar"
skip = "*.css,*.js,*.lock"

[tool.ruff]
line-length = 88
target-version = "py313"
# 移除 "B" 选择器（Ruff 不支持该类别规则）
select = ["E", "F", "I", "UP", "YTT", "PLC", "PT", "SIM"]
ignore = [
    # 同时移除所有 "B" 类规则的忽略（已无意义）
    "B904", "B905", "PLC0415", 
    "PLW2901", "PT011", "PT018", "PT028", 
    "S101", "SIM905", "UP038"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "PT011", "PT018"]
".*_test\\.py" = ["S101", "PT011", "PT018"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ".*venv.*|.*__pycache__.*|.*migrations.*"

[[tool.mypy.overrides]]
module = [
    "django.*", "tensorflow.*", "keras.*", 
    "matplotlib.*", "pymongo.*"
]
ignore_missing_imports = true
