[tool.poetry]
name = "Hangman"
version = "0.2.0"
description = ""
authors = ["DiodDan <danilaprig@gmail.com>"]
readme = "README.md"
packages = [{include = "hangman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
colorama = "0.4.6"
beautifulsoup4 = "4.12"


[tool.poetry.group.dev.dependencies]
mypy = "1.5.1"
wemake-python-styleguide = "0.18.0"
isort = "5.12.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
pytest-timeout = "2.2.0"
pytest-randomly = "3.15.0"
requests-mock = "1.11.0"
pytest-freezer = "0.4.8"
types-requests = " 2.31.0.2"

[build-system]
requires = ["poetry-core", "colorama", "bs4", "requests"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true
